--- a/chiralium-handler/pom.xml
+++ b/chiralium-handler/pom.xml
@@ -18,20 +18,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.simple</groupId>
+            <artifactId>chiralium-support</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.tencentcloudapi</groupId>
             <artifactId>tencentcloud-sdk-java</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
