feat: 引入kafka并测试

--- a/chiralium-web/pom.xml
+++ b/chiralium-web/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>chiralium-handler</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.7</version>
+        </dependency>
     </dependencies>
 
 </project>
