--- a/chiralium-web/src/main/resources/application.yml
+++ b/chiralium-web/src/main/resources/application.yml
@@ -1,6 +1,21 @@
+# 腾讯云短信配置 TODO
 tencent:
   sms:
     secretId:
     secretKey:
     sdkAppId:
     signName:
+
+# 数据库配置
+spring:
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/chiralium
+    username: root
+    password: Zx199857
+
+  kafka:
+    bootstrap-servers: localhost:9092
+
+server:
+  port: 9000
